<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RankingFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/opera_senza_titolo"
        tools:layout_editor_absoluteX="0dp" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="90dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:textSize="30dp"
            android:text="@string/Name"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/Score"
            android:layout_marginRight="40dp"
            android:textSize="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">
        <Button
            android:id="@+id/go_back1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"
            android:text="@string/Back"
            android:textAllCaps="false"
            android:background="@drawable/edittextbackground"/>
        <Button
            android:id="@+id/export"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAllCaps="false"
            android:layout_margin="20dp"
            android:text="@string/Export"
            android:background="@drawable/edittextbackground"/>
    </RelativeLayout>



</RelativeLayout>