<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:layout_marginBottom="10dp"
    tools:context=".ingress.SingUpFragment">
    <include layout="@layout/menu"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spiegazione"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittextbackground"
        android:textSize="20dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_marginBottom="10dp"
        android:text="@string/Insert_data"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:id="@+id/email"
        android:layout_below="@+id/spiegazione"
        android:hint="email"
        android:background="@drawable/edittextbackground"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:id="@+id/password"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_below="@+id/email"
        android:hint="password"
        android:background="@drawable/edittextbackground"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_key_24"
        android:drawablePadding="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:id="@+id/conPassword"
        android:fontFamily="sans-serif-condensed-medium"
        android:layout_below="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/ConfPssw"
        android:background="@drawable/edittextbackground"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/ic_baseline_key_off_24"
        android:drawablePadding="20dp"/>



    <Button
        android:id="@+id/singupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextbackground"
        android:text="@string/Sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>